ros2 colcon updates

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       NVIDIA_DRIVER_CAPABILITIES: all
       ROS_LOG_DIR: /tmp
     container_name: kr_test
-    entrypoint: /entrypoint.bash # Options are 'position_node' or 'velocity_node'
+    entrypoint: /entrypoint.bash
     stdin_open: true
     tty: true
     network_mode: host
